Fixed  safetensors error

--- a/a1111-colab-helper.ipynb
+++ b/a1111-colab-helper.ipynb
@@ -100,9 +100,9 @@
    "outputs": [],
    "source": [
     "controlnet_name = \"\"\n",
-    "LORA_LINK = controlnet_links.get(controlnet_name)\n",
+    "CONTROLNET_LINK = controlnet_links.get(controlnet_name)\n",
     "\n",
-    "lora = manage_models.controlnet_dl(controlnet_name, LORA_LINK)\n"
+    "lora = manage_models.controlnet_dl(controlnet_name, CONTROLNET_LINK)\n"
    ]
   },
   {
