bug fix: a1111-colab-helper.ipynb

--- a/a1111-colab-helper.ipynb
+++ b/a1111-colab-helper.ipynb
@@ -176,7 +176,7 @@
     "checkpoint_name = \"\"\n",
     "MODEL_LINK = checkpoint_links.get(checkpoint_name)\n",
     "\n",
-    "model = manage_models.checkpointdl(checkpoint_name, MODEL_LINK)"
+    "model = manage_models.checkpoint_dl(checkpoint_name, MODEL_LINK)"
    ]
   },
   {
